fixed template setup

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [URL]
-GameName=MyProject
+GameName=coding1
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
@@ -70,13 +70,13 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/MyProject")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/MyProject")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/coding1")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/coding1")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=96D45D5F6B446420D85F40A432171A93
+SecurityToken=D625259B79488C52D6F0F5AD424882F4
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
